[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ground <groundgtx@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.10"  # 3,12 -> 3,10
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"


[tool.pdm.dev-dependencies]
dev = [
    "flake8<8.0.0,>=7.1.1",
]

[tool.pdm.build]
includes = ["brain_games"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[project]
authors = [
    {name = "Ground", email = "groundgtx@gmail.com"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "prompt<1.0.0,>=0.4.1",
]
name = "hexlet-code"
version = "0.1.0"
description = ""
readme = "README.md"

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[dependency-groups]
dev = [
    "ruff>=0.8.3",
]
